--- a/Resources/character/daigoro.plist
+++ b/Resources/character/daigoro.plist
@@ -7,7 +7,7 @@
 			<key>daigoro_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1522},{21,33}}</string>
+				<string>{{888,1430},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>daigoro_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1182},{22,33}}</string>
+				<string>{{888,1362},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>daigoro_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1216},{22,33}}</string>
+				<string>{{888,1396},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>daigoro_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1454},{21,33}}</string>
+				<string>{{888,1634},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>daigoro_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1420},{21,33}}</string>
+				<string>{{888,1600},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>daigoro_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1386},{21,33}}</string>
+				<string>{{888,1566},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>daigoro_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1352},{21,33}}</string>
+				<string>{{888,1668},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>daigoro_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1556},{21,33}}</string>
+				<string>{{888,1498},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>daigoro_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1488},{21,33}}</string>
+				<string>{{888,1464},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>daigoro_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1250},{21,33}}</string>
+				<string>{{888,1736},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>daigoro_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1318},{21,33}}</string>
+				<string>{{888,1702},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>daigoro_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1284},{21,33}}</string>
+				<string>{{888,1532},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,27 +175,27 @@
 			<key>daigoro_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{308,1181}}</string>
+				<string>{{0,0},{884,1359}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{276,12},{308,1181}}</string>
+				<string>{{420,28},{884,1359}}</string>
 				<key>sourceSize</key>
-				<string>{800,1200}</string>
+				<string>{1600,2400}</string>
 			</dict>
 
 			<key>daigoro_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{308,1181}}</string>
+				<string>{{888,681},{443,680}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{276,12},{308,1181}}</string>
+				<string>{{210,14},{443,680}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -203,13 +203,83 @@
 			<key>daigoro_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{309,0},{307,1181}}</string>
+				<string>{{888,681},{443,680}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{210,14},{443,680}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>daigoro_s_3.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{885,0},{443,680}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{210,14},{443,680}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>daigoro_s_4.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{444,1360},{443,680}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{210,14},{443,680}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>daigoro_s_5.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1332,0},{308,1181}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{276,12},{308,1181}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>daigoro_s_6.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1641,0},{307,1181}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
 				<string>{{276,12},{307,1181}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>daigoro_s_7.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1360},{443,680}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{210,14},{443,680}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -221,7 +291,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{1024,2048}</string>
+			<string>{2048,2048}</string>
 			<key>textureFileName</key>
 			<string>daigoro.png</string>
 			</dict>
