--- a/Resources/character/daigoro.plist
+++ b/Resources/character/daigoro.plist
@@ -1,299 +1,291 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
 		<key>frames</key>
 		<dict>
-			<key>daigoro_0_0.png</key>
+			<key>character/plist/daigoro/daigoro_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1430},{21,33}}</string>
+				<string>{{0,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_0_1.png</key>
+			<key>character/plist/daigoro/daigoro_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1362},{22,33}}</string>
+				<string>{{32,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{22,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_0_2.png</key>
+			<key>character/plist/daigoro/daigoro_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1396},{22,33}}</string>
+				<string>{{64,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{22,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_1_0.png</key>
+			<key>character/plist/daigoro/daigoro_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1634},{21,33}}</string>
+				<string>{{96,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_1_1.png</key>
+			<key>character/plist/daigoro/daigoro_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1600},{21,33}}</string>
+				<string>{{128,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_1_2.png</key>
+			<key>character/plist/daigoro/daigoro_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1566},{21,33}}</string>
+				<string>{{160,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_2_0.png</key>
+			<key>character/plist/daigoro/daigoro_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1668},{21,33}}</string>
+				<string>{{192,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_2_1.png</key>
+			<key>character/plist/daigoro/daigoro_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1498},{21,33}}</string>
+				<string>{{224,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_2_2.png</key>
+			<key>character/plist/daigoro/daigoro_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1464},{21,33}}</string>
+				<string>{{256,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_3_0.png</key>
+			<key>character/plist/daigoro/daigoro_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1736},{21,33}}</string>
+				<string>{{288,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_3_1.png</key>
+			<key>character/plist/daigoro/daigoro_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1702},{21,33}}</string>
+				<string>{{320,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_3_2.png</key>
+			<key>character/plist/daigoro/daigoro_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,1532},{21,33}}</string>
+				<string>{{352,2000},{32,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{5,0},{21,33}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{32,33}</string>
 			</dict>
-
-			<key>daigoro_s_0.png</key>
+			<key>character/plist/daigoro/daigoro_a_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{884,1359}}</string>
+				<string>{{1200,1200},{64,64}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{420,28},{884,1359}}</string>
+				<false />
 				<key>sourceSize</key>
-				<string>{1600,2400}</string>
+				<string>{64,64}</string>
 			</dict>
-
-			<key>daigoro_s_1.png</key>
+			<key>character/plist/daigoro/daigoro_a_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,681},{443,680}}</string>
+				<string>{{1200,1264},{64,64}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{210,14},{443,680}}</string>
+				<false />
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+			<key>character/plist/daigoro/daigoro_a_1_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1200,1328},{64,64}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false />
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+			<key>character/plist/daigoro/daigoro_a_1_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1200,1392},{64,64}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false />
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+			<key>character/plist/daigoro/daigoro_a_2_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1200,1456},{64,64}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false />
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+			<key>character/plist/daigoro/daigoro_a_2_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1200,1520},{64,64}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false />
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+			<key>character/plist/daigoro/daigoro_a_3_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1200,1584},{64,64}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false />
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+			<key>character/plist/daigoro/daigoro_a_3_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{1200,1648},{64,64}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false />
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+			<key>character/plist/daigoro/daigoro_s_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{800,1200}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false />
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
-
-			<key>daigoro_s_2.png</key>
+			<key>character/plist/daigoro/daigoro_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,681},{443,680}}</string>
+				<string>{{0,1200},{800,1200}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{210,14},{443,680}}</string>
+				<true />
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
-
-			<key>daigoro_s_3.png</key>
+			<key>character/plist/daigoro/daigoro_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{885,0},{443,680}}</string>
+				<string>{{800,0},{800,1200}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{210,14},{443,680}}</string>
+				<false />
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
-
-			<key>daigoro_s_4.png</key>
+			<key>character/plist/daigoro/effect_kick.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{444,1360},{443,680}}</string>
+				<string>{{1200,1712},{64,64}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{210,14},{443,680}}</string>
+				<false />
 				<key>sourceSize</key>
-				<string>{800,1200}</string>
+				<string>{64,64}</string>
 			</dict>
-
-			<key>daigoro_s_5.png</key>
-			<dict>
-				<key>frame</key>
-				<string>{{1332,0},{308,1181}}</string>
-				<key>offset</key>
-				<string>{0,0}</string>
-				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{276,12},{308,1181}}</string>
-				<key>sourceSize</key>
-				<string>{800,1200}</string>
-			</dict>
-
-			<key>daigoro_s_6.png</key>
-			<dict>
-				<key>frame</key>
-				<string>{{1641,0},{307,1181}}</string>
-				<key>offset</key>
-				<string>{0,0}</string>
-				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{276,12},{307,1181}}</string>
-				<key>sourceSize</key>
-				<string>{800,1200}</string>
-			</dict>
-
-			<key>daigoro_s_7.png</key>
-			<dict>
-				<key>frame</key>
-				<string>{{0,1360},{443,680}}</string>
-				<key>offset</key>
-				<string>{0,0}</string>
-				<key>rotated</key>
-				<false/>
-				<key>sourceColorRect</key>
-				<string>{{210,14},{443,680}}</string>
-				<key>sourceSize</key>
-				<string>{800,1200}</string>
-			</dict>
-
 		</dict>
-
 		<key>metadata</key>
 		<dict>
 			<key>format</key>
 			<integer>2</integer>
-			<key>size</key>
-			<string>{2048,2048}</string>
 			<key>textureFileName</key>
 			<string>daigoro.png</string>
-			</dict>
+			<key>realTextureFileName</key>
+			<string>daigoro.png</string>
+			<key>size</key>
+			<string>{2048,2048}</string>
 		</dict>
+		<key>texture</key>
+		<dict>
+			<key>width</key>
+			<integer>2048</integer>
+			<key>height</key>
+			<integer>2048</integer>
+		</dict>
+	</dict>
 </plist>
